--- a/css/test.css
+++ b/css/test.css
@@ -52,3 +52,23 @@ body {
   position: relative;
   padding: 0 4vmin;
 }
+
+
+    .marquee {
+    width: 400px;
+line-height: 50px;
+	background-color: Black;
+	color: green;
+    white-space: nowrap;
+    overflow: hidden;
+    box-sizing: border-box;
+}
+.marquee p {
+    display: inline-block;
+    padding-left: 100%;
+    animation: marquee 10s linear infinite;
+}
+@keyframes marquee {
+    0%   { transform: translate(0, 0); }
+    100% { transform: translate(-100%, 0); }
+}
