--- a/css/test.css
+++ b/css/test.css
@@ -8,7 +8,7 @@ body {
   font-size: 4vmin;
   min-height: 110vh;
   display: grid;
-  overflow: hidden;
+  overflow: scroll;
   place-items: center;
   background: black;
 }
