--- a/css/test.css
+++ b/css/test.css
@@ -6,10 +6,10 @@
 body {
   font-family: monospace;
   font-size: 4vmin;
-  min-height: 110vh;
+  min-height: 100vh;
   display: grid;
   overflow: scroll;
-  place-items: center;
+  place-items: right;
   background: black;
 }
 .hr,
