--- a/css/test.css
+++ b/css/test.css
@@ -77,3 +77,7 @@ body {
     0%   { transform: translate(0, 0); }
     100% { transform: translate(-100%, 0); }
 }
+.sticky{
+  position: sticky;
+  top: 0;
+}
