--- a/css/test.css
+++ b/css/test.css
@@ -15,6 +15,7 @@ body {
   background: linear-gradient(-45deg, #c4d2ef, #dfe6f6);
   padding-bottom: 100vmin;
   margin: 1vmin
+  backgroudn
 }
 .hr,
 .min,
