--- a/css/rain.css
+++ b/css/rain.css
@@ -168,3 +168,27 @@ body.single-toggle .drop {
 body.single-toggle .drop:nth-child(10) {
   display: block;
 }
+
+.marquee {
+  position: relative;
+  width: 400px;
+  line-height: 50px;
+	background-color: Black;
+	color: green;
+  white-space: nowrap;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+.marquee p {
+    display: inline-block;
+    padding-left: 100%;
+    animation: marquee 10s linear infinite;
+}
+@keyframes marquee {
+    0%   { transform: translate(0, 0); }
+    100% { transform: translate(-100%, 0); }
+}
+.sticky{
+  position: sticky;
+  top: 0;
+}
